<resources>
    <string name="app_name">InventorySystem</string>
    <string name="log_in">Log In</string>
    <string name="sign_up">Sign Up</string>
    <string name="inventory_system">Inventory System</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="add_product">Add Product</string>
    <string name="product_for_testing">Product for Testing</string>
    <string name="_111111">111111</string>
    <string name="_99">99</string>
    <string name="delete">Delete</string>
    <string name="product_name">Product Name</string>
    <string name="product_number">Product Number</string>
    <string name="in_stock">In Stock</string>
    <string name="sku">SKU</string>
    <string name="sms_permission">SMS Permission</string>
    <string name="update_quantity">Update Quantity</string>
    <string name="sign_up_for_sms_notifications">Sign up for SMS Notifications >>></string>
    <string name="app_settings">App Settings</string>
    <string name="user_preferences">User Preferences</string>
    <string name="text_notifications_sms">Text Notifications (SMS)</string>
    <string name="in_app_notifications">In-App Notifications</string>
    <string name="invalid_login">Those login credentials do not match our records. Please try again.</string>
    <string name="enter_username">Please enter your username.</string>
    <string name="valid_username">Please enter your username.</string>
    <string name="valid_password">Please enter your password.</string>
    <string name="new_user_instructions">To register a new user account for this app, please create a username and password below.</string>
    <string name="re_enter_password">Re-enter password</string>
    <string name="create_user">Create User</string>
    <string name="cancel">Cancel</string>
    <string name="new_user">New User</string>
    <string name="passwords_do_not_match">Passwords do not match. Please try again.</string>
    <string name="unable_register_user">Unable to register new user. Please try again.</string>
    <string name="product_quantity">Product Quantity</string>
    <string name="add_new_product">Add New Product</string>
    <string name="save">Save</string>
    <string name="add_new_product_instructions">Enter the data requested below in order to add a new product.</string>
    <string name="inventory">Inventory</string>
    <string name="delete_product">Delete Product</string>
    <string name="are_you_sure_delete">Are you sure you want to delete the following product?</string>
    <string name="enter_quantity">Please enter the product quantity.</string>
    <string name="enter_product_name">Please enter the name of the product.</string>
    <string name="enter_product_number">Please enter the product number.</string>
    <string name="current_quantity">Current Quantity: </string>
    <string name="togglebutton">ToggleButton</string>
    <string name="settings">settings</string>

</resources>