<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".GridActivity">

    <LinearLayout
        android:id="@+id/buttonHeader"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="10dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <Button
            android:id="@+id/addProductButton"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:layout_gravity="top"
            android:layout_marginEnd="10dp"
            android:text="@string/add_product"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"/>

        <ImageButton
            android:id="@+id/textPermissionButton"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_gravity="top"
            android:layout_marginStart="170dp"
            android:layout_marginEnd="0dp"
            android:contentDescription="@string/app_settings"
            android:src="@drawable/settings_24"
            app:layout_constraintStart_toEndOf="@+id/addProductButton"
            app:layout_constraintEnd_toEndOf="parent"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/gridHeader"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="10dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonHeader">

        <TextView
            android:layout_width="150dp"
            android:layout_height="50dp"
            android:layout_gravity="top"
            android:layout_marginTop="10dp"
            android:text="@string/product_name"
            android:textColor="@color/purple_500"
            android:textSize="14sp"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:layout_width="80dp"
            android:layout_height="50dp"
            android:layout_gravity="top"
            android:layout_marginTop="10dp"
            android:text="@string/sku"
            android:textColor="@color/purple_500"
            android:textSize="14sp"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:layout_width="40dp"
            android:layout_height="50dp"
            android:layout_gravity="top"
            android:layout_marginTop="10dp"
            android:text="@string/in_stock"
            android:textColor="@color/purple_500"
            android:textSize="14sp"
            app:layout_constraintTop_toTopOf="parent" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/gridHeader">

        <TextView
            android:id="@+id/productName"
            android:layout_width="150dp"
            android:layout_height="56dp"
            android:layout_gravity="top"
            android:layout_marginTop="10dp"
            android:text="@string/product_for_testing"
            android:textColor="@color/purple_500"
            android:textSize="14sp"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/productNumber"
            android:layout_width="80dp"
            android:layout_height="56dp"
            android:layout_gravity="top"
            android:layout_marginTop="10dp"
            android:text="@string/_111111"
            android:textColor="@color/purple_500"
            android:textSize="14sp"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/productQuantity"
            android:layout_width="50dp"
            android:layout_height="56dp"
            android:layout_gravity="top"
            android:layout_marginTop="10dp"
            android:text="@string/_99"
            android:textColor="@color/purple_500"
            android:textSize="14sp"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageButton
            android:id="@+id/quantityButton"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_gravity="top"
            android:layout_marginTop="10dp"
            android:contentDescription="@string/update_quantity"
            android:src="@drawable/up_down_24"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageButton
            android:id="@+id/deleteButton"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_gravity="top"
            android:layout_marginTop="10dp"
            android:contentDescription="@string/delete"
            android:src="@drawable/ic_baseline_delete_24"
            app:layout_constraintTop_toTopOf="parent" />


    </LinearLayout>



</androidx.constraintlayout.widget.ConstraintLayout>